--- a/fmh-android/app/build.gradle
+++ b/fmh-android/app/build.gradle
@@ -9,17 +9,13 @@ plugins {
     id 'com.google.firebase.crashlytics'
 }
 
-repositories {
-    maven { url 'https://jitpack.io' }
-}
-
 android {
     compileSdkVersion 32
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
-        minSdkVersion 26
+        minSdkVersion 29
         targetSdkVersion 32
         versionCode 14
         versionName "1.0.0"
@@ -28,8 +24,8 @@ android {
 
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -49,21 +45,20 @@ android {
             buildConfigField "String", "BASE_URL", '"http://www.981757-ca08998.tmweb.ru:8080/fmh/"'
         }
     }
+    packagingOptions {
+        resources.excludes.add("META-INF/*")
+    }
+}
+def aspectJVersion = '1.9.21'
+
+configurations {
+    agent {
+        canBeResolved = true
+        canBeConsumed = true
+    }
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.1-alpha07'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
-    androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.4.0'
-    implementation 'com.github.blocoio:faker:1.2.9'
-    testImplementation 'com.github.blocoio:faker:1.2.9'
-    androidTestImplementation 'com.github.blocoio:faker:1.2.9'
-
     def retrofit_version = "2.9.0"
     def retrofit_gson_version = "2.9.0"
     def okhttp_logging_version = "4.9.2"
@@ -78,7 +73,7 @@ dependencies {
     def hilt_version = '2.41'
     def gson_version = '2.9.0'
     def swipe_refresh_version = '1.1.0'
-
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_version"
@@ -97,7 +92,6 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    //noinspection LifecycleAnnotationProcessorWithJava8
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -108,4 +102,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation 'androidx.test.ext:junit:1.2.0-alpha01'
+    androidTestImplementation 'androidx.test:rules:1.6.0-alpha01'
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    testImplementation platform("io.qameta.allure:allure-bom:$allureVersion")
+    testImplementation "io.qameta.allure:allure-junit4"
+    androidTestImplementation "io.qameta.allure:allure-kotlin-android:2.4.0"
+    agent "org.aspectj:aspectjweaver:$aspectJVersion"
 }
