--- a/fmh-android/app/build.gradle
+++ b/fmh-android/app/build.gradle
@@ -7,7 +7,11 @@ plugins {
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
     id 'com.google.firebase.crashlytics'
+    id 'io.qameta.allure' version '2.11.2'
+    id "io.qameta.allure-report" version "2.11.2"
+    id "io.qameta.allure-adapter" version "2.11.2"
 }
+def allureVersion = "2.28.0"
 
 android {
     compileSdkVersion 32
